--- a/src/components/auth/LoginPage/LoginPage.css
+++ b/src/components/auth/LoginPage/LoginPage.css
@@ -31,6 +31,7 @@ h1 {
   height: 100vh;
   min-height: 800px;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   background-image: radial-gradient(circle at 50% -20.71%, #ff57d2 0, #ff4edb 12.5%, #f046e3 25%, #d63feb 37.5%, #b53cf2 50%, #8c3df9 62.5%, #4f40ff 75%, #0046ff 87.5%, #004bff 100%);
@@ -43,6 +44,7 @@ h1 {
   width: 95%;
   background-color: #fff;
   border-radius: 1rem;
+ 
 }
 
 .form_field {
@@ -70,4 +72,13 @@ h1 {
     background-color: #5123e6;
     color: #fff;
     font-size: 1.8rem;
+}
+
+.loginPage-error {
+  background-color: rgb(224, 36, 94, 0.1);
+  border: 1px solid rgba(224, 36, 94, 0.2);
+  border-radius: 5px;
+  color: #fff;
+  margin-top: 20px;
+  padding: 10px 15px;
 }
