--- a/src/components/auth/LoginPage/LoginPage.css
+++ b/src/components/auth/LoginPage/LoginPage.css
@@ -79,8 +79,8 @@ input[type="checkbox"]{
 }
 
 .loginPage-error {
-  background-color: rgb(224, 36, 94, 0.1);
-  border: 1px solid rgba(224, 36, 94, 0.2);
+  background-color: rgba(163, 17, 63, 0.993);
+  border: 1px solid rgba(245, 5, 81, 0.2);
   border-radius: 5px;
   color: #fff;
   margin-top: 20px;
