--- a/src/components/adverts/AdvertsPage/Advert.css
+++ b/src/components/adverts/AdvertsPage/Advert.css
@@ -3,7 +3,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-image: radial-gradient(circle at 50% -20.71%, #ff57d2 0, #ff4edb 12.5%, #f046e3 25%, #d63feb 37.5%, #b53cf2 50%, #8c3df9 62.5%, #4f40ff 75%, #0046ff 87.5%, #004bff 100%);
+    background-image: linear-gradient(270deg, #c7fdff 0, #a9f0fc 12.5%, #88e2f6 25%, #5ed2f2 37.5%, #0cc1ed 50%, #00b0e9 62.5%, #009fe6 75%, #0090e4 87.5%, #0081e1 100%);
     color: #fff; 
     font-weight: bold;
     font-size: 2.8rem;
@@ -39,7 +39,7 @@
     padding: 5px;
     margin: 15px;
     height: 35px;
-    background-color: #0a83fb; 
+    background-color: #6cb9c3; 
     color: #fff; 
     font-weight: bold;
     font-size: 1.5rem;
