--- a/src/filters/Filter.css
+++ b/src/filters/Filter.css
@@ -1,15 +1,18 @@
+
+
 .filter,
 h4{
     width: 100%;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
+    
+
 }
 
 h4{ 
     font-size: 3rem;
-
+    
 }
 
 label{
@@ -23,7 +26,8 @@ label{
 
 
 .radio_buttons,
-.filter-buttons{
+.filter-buttons,
+.filter-tags{
 
     display: flex;
     justify-content: center;
@@ -43,6 +47,13 @@ input[type="radio"] {
 
 .filter-buttons button{
 
-    margin: 4px;
+    margin: 30px;
+    
+}
+
+.filter-tags{
+
+    margin-top: 10px;
+   
 
 }
