--- a/src/filters/Filter.css
+++ b/src/filters/Filter.css
@@ -1,59 +1,62 @@
-
-
-.filter,
-h4{
-    width: 100%;
+.container_search {
+    padding: 3rem 3rem;
+    max-width: 400px;
+    width: 95%;
+    max-height: 350px;
+    background-color: #fff;
+    border-radius: 1rem;
+    margin-bottom: 30px;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    
+    justify-content: center;
+}
+
+
+.search_name{
+    padding: 1rem;
+    width: 350px;
+    height: 35px;
+    font-size: 1.2rem;
 
 }
 
-h4{ 
-    font-size: 3rem;
-    
+.filter-tags,
+.radio_buttons{
+
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+
+}
+input[type="radio"],
+input[type="checkbox"]{
+
+    margin-right: 10px;
 }
 
 label{
-    color: black;
-    font-weight: bold;
-    font-size: 2.5rem;
-    margin-right: 10px;
-
-}
-
-
-
-.radio_buttons,
-.filter-buttons,
-.filter-tags{
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-}
-
-input[type="text"] {
-
-    height: 40px;
-    font-size: 2rem;
-}
-
-input[type="radio"] {
-    margin-right: 10px;
-}
-
-.filter-buttons button{
-
-    margin: 30px;
     
+    font-size: 1.8rem;
+    margin-right: 15px;
+    margin-top: 3px;
+
 }
 
-.filter-tags{
-
-    margin-top: 10px;
+.container_buttons{
+    display: flex;
+    align-items: center;
    
-
+}
+.btn_search{
+    
+   
+    width: 100%;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 30px;
+    font-size: 1.4rem;
+   
 }
