--- a/src/filters/Filter.css
+++ b/src/filters/Filter.css
@@ -1,8 +1,8 @@
 .container_search {
-    padding: 3rem 3rem;
+    padding: 3.5rem 3.5rem;
     max-width: 400px;
     width: 95%;
-    max-height: 350px;
+    max-height: 380px;
     background-color: #fff;
     border-radius: 1rem;
     margin-bottom: 30px;
@@ -46,17 +46,16 @@ label{
 .container_buttons{
     display: flex;
     align-items: center;
+    justify-content: center;
    
 }
 .btn_search{
     
-   
-    width: 100%;
-    
+    width: 40%;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-right: 30px;
+    margin: 1.5rem;
     font-size: 1.4rem;
    
 }
