--- a/src/components/auth/LoginPage/LoginPage.css
+++ b/src/components/auth/LoginPage/LoginPage.css
@@ -76,6 +76,9 @@ input[type="checkbox"]{
 
 
 .loginPage-error {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: rgba(163, 17, 63, 0.993);
   border: 1px solid rgba(245, 5, 81, 0.2);
   border-radius: 5px;
